--- a/assets/style.css
+++ b/assets/style.css
@@ -16,6 +16,11 @@ body { max-width: 1920px; margin: auto; }
     padding-block: 30px;
     align-items: center;
 }
+#carousel .carousel-item img {
+    width: 100%; 
+    height: auto; 
+    object-fit: cover; 
+}
 #about, #contact, #services, .item-column { position: relative; }
 .top-header .name { font-size: 26px; }
 .nav ul { list-style-type: none; font-size: 14px; margin-bottom: 0; }
@@ -32,10 +37,13 @@ body { max-width: 1920px; margin: auto; }
 #about-me p { width: 80%; font-size: 14px; }
 .title { text-align: center; padding-block: 2em; }
 .gallery .nav { justify-content: center; }
-.nav-pills .nav-link.active, .nav-pills .show > .nav-link { color: #fff; background-color: #beb45a; border-radius: 0; }
+.nav-pills .nav-link.active, .nav-pills .show > .nav-link { font-weight: bold; color: #fff; background-color: #824512; border-radius: 0; }
 .item-column { margin-bottom: 0!important; padding: 0; }
 .item-column::after { content: ""; display: block; padding-bottom: 100%; }
 .gallery-item { position: absolute; width: 100%; height: 100%; object-fit: cover; padding: .5em; }
+.nav-link{
+    font-size: 1.5rem;
+}
 .mg-next, .mg-prev {
     width: 30px;
     height: 30px;
@@ -88,6 +96,32 @@ form {
 form input { height: 2.5em; }
 form textarea { height: 5em; line-height: 2.5em; font-size: 1.2em; }
 input[type=submit] { background-color: #beb45a; padding: .5em 1em; }
+
+.carousel-control-next, 
+.carousel-control-prev {
+    position: absolute; 
+    top: 50%; 
+    transform: translateY(-50%); 
+    background-color: rgba(0, 0, 0, 0.5); 
+    border-radius: 50%; 
+    width: 60px; 
+    height: 60px; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1; 
+}
+.carousel-control-next {
+    right: 10px; 
+}
+.carousel-control-prev {
+    left: 10px; 
+}
+.carousel-control-next-icon, 
+.carousel-control-prev-icon {
+    width: 40px; 
+    height: 40px;
+}
 
 /* Media Queries */
 @media all and (max-width: 1180px) {
