--- a/assets/style.css
+++ b/assets/style.css
@@ -29,8 +29,8 @@ body { max-width: 1920px; margin: auto; }
 .social-link img { width: 20px; }
 #about { background-color: #f6d2b8; }
 .picture.left::before { background-color: #e5975f; position: absolute; left: 0; }
-.picture { flex: 1; margin: 0 20px; z-index: 0; }
-.picture img { width: 100%; }
+.picture { flex: 1; margin: 0 20px; z-index: 0; max-width: 470px; }
+.picture img { width: 100%; height: auto; display: block; }
 #about-me, .form-container { flex: 2; }
 .about-me__title { margin-top: 1em; margin-bottom: 60px; font-size: 30px; }
 .about-me__introduction { font-weight: 800; width: 60%; }
